...
            "state" : "translated",
            "value" : "Altitude Maximale"
          }
        }
      }
    },
    "achievement_longest_run" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Longest Run"
...
            "state" : "translated",
            "value" : "Marathon Virtuelle"
          }
        }
      }
    },
    "achievements_title" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Achievements"
...
            "state" : "translated",
            "value" : "Trophées"
          }
        }
      }
    },
    "back_button" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Back to Achievements"
...
            "state" : "translated",
            "value" : "Une erreur est survenue"
          }
        }
      }
    },
    "help_faq_button" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Help & FAQ"
...
            "state" : "translated",
            "value" : "chargement des réalisations"
          }
        }
      }
    },
    "navigation_done" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Done"
...
            "state" : "translated",
            "value" : "Pas encore obtenu"
          }
        }
      }
    },
    "options_section_header" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "OPTIONS"
...
            "state" : "translated",
            "value" : "Record : %1$@"
          }
        }
      }
    },
    "section_personal_records" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Personal Records"
...
            "state" : "translated",
            "value" : "Records Personnels"
          }
        }
      }
    },
    "section_virtual_races" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Virtual Races"
...
            "state" : "translated",
            "value" : "J'ai battu mon record sur %1$@ sur Runkeeper avec un temps de %2$@ ! 🏃🏆"
          }
        }
      }
    },
    "share_progress_button" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Share Progress"
...
            "state" : "translated",
            "value" : "Partager mes progrès"
          }
        }
      }
    },
    "share_summary_button" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Share Achievements Summary"
...
            "state" : "translated",
            "value" : "Course virtuelle"
          }
        }
      }
    },
    "view_achievements_button" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "View Achievements"
...
